Fixed positioning issues on mobile

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 40px;
+    margin: 0 40px;
     gap: 70px;
 }
 
@@ -133,18 +133,25 @@ header img {
     background: #7AC7C4;
 }
 
+main {
+    display: flex;
+    justify-content: center;
+    margin: 0 40px;
+}
+
 .main-container {
     display: flex;
     justify-content: center;
-    margin-right: 30px;
 }
 
 .main-text-container {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    margin: 0 80px;
-    padding: 100px;
+    align-items: flex-start;
+    justify-content: center;
+    width: 60%;
+    padding: 120px;
+    margin-right: 60px;
     text-align: left;
     background-color: #EEEEEE;
     border-radius: 40px;
@@ -161,7 +168,7 @@ header img {
 
 .main-experience-container {
     width: 40%;
-    padding: 50px 80px;
+    padding: 50px 50px;
     justify-content: center;
 }
 
@@ -175,6 +182,8 @@ header img {
     align-items: center;
     flex-wrap: wrap;
     gap: 70px;
+    margin: 0;
+    padding: 0;
 }
 
 .main-experience-container li {
@@ -269,9 +278,9 @@ header img {
 .light-mode.main-text-container {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    margin: 0 80px;
-    padding: 100px;
+    width: 60%;
+    padding: 120px;
+    margin-right: 60px;
     text-align: left;
     background-color: #232931;
     border-radius: 40px;
@@ -279,7 +288,7 @@ header img {
 }
 
 /* Mobile Response */
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 1000px) {
     nav ul li {
         display: none;
     }
@@ -311,12 +320,13 @@ header img {
     }
 
     header img {
-        width: 500px;
+        width: 391px;
         gap: 0;
     }
 
     .header-text {
-        margin: 0 10px 0 0;
+        width: 90%;
+        margin: 0;
         text-align: center;
     }
 
@@ -329,7 +339,7 @@ header img {
         width: 100%;
         margin: 0;
         padding: 15%;
-        border-radius: 0;
+        border-radius: 20px;
         align-items: center;
     }
 
@@ -337,7 +347,7 @@ header img {
         width: 100%;
         margin: 0;
         padding: 15%;
-        border-radius: 0;
+        border-radius: 20px;
         align-items: center;
     }
 
@@ -354,10 +364,13 @@ header img {
     .main-experience-container {
         display: flex;
         flex-direction: column;
+        align-items: center;
         width: 100%;
     }
 
     .main-experience-container ul {
-        margin-right: 30px;
+        margin: 0;
+        padding: 0;
+        justify-content: center;
     }
 }
